# InfoUtils

./: .clang-format  .gitignore  CMakeLists.txt  Changelog.md  LICENSE  README.md
cmake/: Dependencies.cmake  FeatureTests.cmake  InfoUtilsConfig.cmake.in  dependencies-InfoUtils.cmake  dependencies.cmake  utils.cmake  warnings.cmake
docs/: Compliance.md  Configuration.md  Usage.md
include/info/: _macros.hpp  const_ptr.hpp  expected.hpp  fail.hpp  functor.hpp  future.hpp  lambda.hpp  nonnull.hpp  nullable.hpp  queue.hpp  require.hpp  static_warning.hpp  utils.hpp
test/: CMakeLists.txt  Test_Expected.hpp  Test_Fail.hpp  Test_Lambda.hpp  Test_Nonnull.hpp  Test_Nullable.hpp  Test_StatefulFunctor.hpp  Test_Tests.hpp  assertion.hpp  expected.test.cpp  fail.test.cpp  functor.test.cpp  future.test.cpp  lambda.test.cpp  main.cpp  main.cpp.in  nonnull.test.cpp  nullable.test.cpp  queue.test.cpp
